# simd-img

./: .gitignore  CMakeLists.txt  README.md  build.py
doc/: high_level_design.md  low_level_design.md
include/simd_img/: filters.h  image.h
src/: filters_scalar.cpp  filters_sse.cpp  image.cpp
tests/: test_filters.cpp
